jar step 1